prevent button text from wrapping

--- a/app/scss/_buttons.scss
+++ b/app/scss/_buttons.scss
@@ -49,6 +49,7 @@
   background-color: $design-white-color;
   color: $design-dark-blue-color;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 .o-button__plain-text7 {
@@ -57,6 +58,7 @@
   background-color: $design-white-color;
   color: $design-dark-blue-color;
   font-weight: bold;
+  white-space: nowrap;
 }
 
 %o-button__icon {
